# QScores-Archiver

./: CITATION.cff  CMakeLists.txt  Dockerfile  README  README.md  environment-minimal.yml  environment.yml
cmake/: global.cmake
data/: sample.qs
doc/: AUTHORS  ChangeLog  README  README.html  VERSION  classes.dot  documentation.html  logbinning.txt  unibinning.txt
executables/qscores/: CMakeLists.txt  Doxyfile.in  QScoresConfig.hpp.in  accessors.cpp  binning.cpp  binning.hpp  decode.cpp  encode.cpp  external.cpp  filesystem-v3.hpp  io.cpp  main.cpp  mutators.cpp  parameters.cpp  parameters.hpp  qscores-defn.hpp  qscores-local.hpp  qscores.cpp  qscores.hpp  run.cpp  transform.cpp
libraries/bitbuffer/: BitBufferConfig.hpp.in  CMakeLists.txt  Doxyfile.in  bitbuffer.cpp  bitbuffer.hpp  bitbuffer_exception.hpp  finish.cpp  io.cpp  main.cpp  testing.cpp  testing.hpp
libraries/bitio/: BitIOConfig.hpp.in  CMakeLists.txt  Doxyfile.in  binary.cpp  binary.hpp  bitio-defn.hpp  bytecode.cpp  bytecode.hpp  delta.cpp  delta.hpp  gamma.cpp  gamma.hpp  golomb.cpp  golomb.hpp  main-test.cpp  math_utils.cpp  math_utils.hpp  parameters-test.cpp  parameters-test.hpp  rice.cpp  rice.hpp  test_random.cpp  test_random.hpp  test_sequential.cpp  test_sequential.hpp  test_showlengths.cpp  test_showlengths.hpp  unary.cpp  unary.hpp
libraries/block-statistics/: BlockStatisticsConfig.hpp.in  CMakeLists.txt  Doxyfile.in  accessors.cpp  block-statistics.cpp  block-statistics.hpp  main.cpp  process.cpp
libraries/common/: main.cpp  systemcfg.hpp
libraries/external-software/: CMakeLists.txt  Doxyfile.in  ExternalSoftwareConfig.hpp.in  accessors.cpp  bzip-bzlib.cpp  external-software-exception.hpp  external-software-local.hpp  external-software.cpp  external-software.hpp  filesystem-v3.hpp  gzip-zlib.cpp  main.cpp  mutators.cpp  process.cpp  repair-shuff.cpp  retrieve.cpp  setup.cpp  testing.cpp  testing.hpp
libraries/huffman/: CMakeLists.txt  Doxyfile.in  HuffmanConfig.hpp.in  debug.cpp  decode.cpp  encode.cpp  huffman.cpp  huffman.hpp  main-test.cpp  main.cpp  process.cpp  sort.cpp  sort.hpp  testing.cpp  testing.hpp
libraries/interpolative/: CMakeLists.txt  Doxyfile.in  InterpolativeConfig.hpp.in  decode.cpp  decode.hpp  encode.cpp  encode.hpp  interpolative.hpp  main-test.cpp  testing.cpp  testing.hpp
libraries/qscores-settings/: CMakeLists.txt  Doxyfile.in  QScoresSettingsConfig.hpp.in  accessors.cpp  main.cpp  mutators.cpp  qscores-settings-defn.hpp  qscores-settings-local.hpp  qscores-settings.cpp  qscores-settings.hpp
libraries/qscores-single/: CMakeLists.txt  Doxyfile.in  QScoresSingleConfig.hpp.in  binning.cpp  binning.hpp  compress.cpp  compress.hpp  debug.cpp  debug.hpp  io.cpp  lossless.cpp  lossy.cpp  main.cpp  mapping.cpp  qscores-single-defn.hpp  qscores-single.cpp  qscores-single.hpp  testing.cpp  testing.hpp
libraries/systemcfg/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/aux/: add-parallel.cmake  add_subdirectory_once.cmake  boost.cmake  determine-parallel.cmake  doxygen.cmake  final-msg.cmake  global.cmake  initial-msg.cmake  policies.cmake  post-compress.cmake
src/bitbuffer/: BitBufferConfig.hpp.in  BitBuffer_Config.hpp.in  CMakeLists.txt  Doxyfile.in  bitbuffer.cpp  bitbuffer.hpp  bitbuffer_exception.hpp  finish.cpp  io.cpp  main.cpp  testing.cpp  testing.hpp
src/bitio/: BitIOConfig.hpp.in  BitIO_Config.hpp.in  CMakeLists.txt  Doxyfile.in  binary.cpp  binary.hpp  bitio-defn.hpp  bytecode.cpp  bytecode.hpp  delta.cpp  delta.hpp  gamma.cpp  gamma.hpp  golomb.cpp  golomb.hpp  main-test.cpp  math_utils.cpp  math_utils.hpp  parameters-test.cpp  parameters-test.hpp  rice.cpp  rice.hpp  test_random.cpp  test_random.hpp  test_sequential.cpp  test_sequential.hpp  test_showlengths.cpp  test_showlengths.hpp  unary.cpp  unary.hpp
src/block-statistics/: BlockStatisticsConfig.hpp.in  BlockStatistics_Config.hpp.in  CMakeLists.txt  Doxyfile.in  accessors.cpp  block-statistics.cpp  block-statistics.hpp  main.cpp  process.cpp
src/cmake/: add-parallel.cmake  add_subdirectory_once.cmake  boost.cmake  compile-flags.cmake  determine-parallel.cmake  doxygen.cmake  final-msg.cmake  git-hash.cmake  initial-msg.cmake  post-compress.cmake  version.cmake
src/common/: CMakeLists.txt  Doxyfile.in  common.hpp  main.cpp
src/external-software/: CMakeLists.txt  Doxyfile.in  ExternalSoftwareConfig.hpp.in  ExternalSoftware_Config.hpp.in  accessors.cpp  bzip-bzlib.cpp  external-software-exception.hpp  external-software-local.hpp  external-software.cpp  external-software.hpp  gzip-zlib.cpp  main.cpp  mutators.cpp  process.cpp  repair-shuff.cpp  retrieve.cpp  setup.cpp  testing.cpp  testing.hpp
src/huffman/: CMakeLists.txt  Doxyfile.in  HuffmanConfig.hpp.in  Huffman_Config.hpp.in  debug.cpp  decode.cpp  encode.cpp  huffman.cpp  huffman.hpp  main-test.cpp  process.cpp  sort.cpp  sort.hpp  testing.cpp  testing.hpp
src/interpolative/: CMakeLists.txt  Doxyfile.in  InterpolativeConfig.hpp.in  Interpolative_Config.hpp.in  decode.cpp  decode.hpp  encode.cpp  encode.hpp  interpolative.hpp  main-test.cpp  testing.cpp  testing.hpp
src/qscores/: CMakeLists.txt  Doxyfile.in  QScoresConfig.hpp.in  QScores_Config.hpp.in  accessors.cpp  binning.cpp  binning.hpp  decode.cpp  encode.cpp  external.cpp  filesystem-v3.hpp  io.cpp  main.cpp  mutators.cpp  parameters.cpp  parameters.hpp  qscores-defn.hpp  qscores-local.hpp  qscores.cpp  qscores.hpp  run.cpp  transform.cpp
src/qscores-settings/: CMakeLists.txt  Doxyfile.in  QScoresSettingsConfig.hpp.in  QScoresSettings_Config.hpp.in  accessors.cpp  main.cpp  mutators.cpp  qscores-settings-defn.hpp  qscores-settings-local.hpp  qscores-settings.cpp  qscores-settings.hpp
src/qscores-single/: CMakeLists.txt  Doxyfile.in  QScoresSingleConfig.hpp.in  QScoresSingle_Config.hpp.in  binning.cpp  binning.hpp  compress.cpp  compress.hpp  debug.cpp  debug.hpp  io.cpp  lossless.cpp  lossy.cpp  main.cpp  mapping.cpp  qscores-single-defn.hpp  qscores-single.cpp  qscores-single.hpp  testing.cpp  testing.hpp
